changed the chatbot text to the left, changed the background colour to grey and changed the colour of h1 and p in demo to white

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,14 @@
   /* Section styling */
   section {
     padding: 40px 20px;
+    background-color: gray;
   }
+
+  #demo h1, p{
+    color: white;
+  }
+
+
   
   /* Chatbot container */
   .chatbot-wrapper {
